--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <video id="friendVideo" autoplay></video>
 
     <script>
-        const socket = new WebSocket('wss://https://fern-nice-ray.glitch.me');  // Вставь URL сервера WebSocket
+        const socket = new WebSocket('wss://fern-nice-ray.glitch.me');  // Вставь URL сервера WebSocket
         let localStream;
         const isOwner = window.location.search.includes('owner=true');
 
